# mac-cam

./: .gitignore  cam.fsh  cam.vsh  gl-cam-renderer.h  gl-cam-renderer.mm  gl-renderer.h  gl-renderer.mm  gl-test-renderer.h  gl-test-renderer.mm  gl-texture-renderer.h  gl-texture-renderer.mm  mac-cam-info.plist  mac-cam-ui.h  mac-cam-ui.mm  mac-cam.h  mac-cam.mm  mac-gl-view.h  mac-gl-view.mm  test.fsh  test.vsh  utilities.h  utilities.mm
AVRecorder.xcodeproj/project.xcworkspace/xcuserdata/nt.xcuserdatad/: UserInterfaceState.xcuserstate
AVRecorder.xcodeproj/xcuserdata/nt.xcuserdatad/xcschemes/: xcschememanagement.plist
en.lproj/: menu.xib  window.xib
gl-app/: CMakeLists.txt  gl-app-test.cpp  gl-app.cpp  gl-app.h  gl-mac-app..h  gl-mac-app.h  gl-mac-app.mm
gl-app/renderers/: gl-cam-renderer.h  gl-cam-renderer.mm  gl-test-renderer.cpp  gl-test-renderer.h
gl-app/shaders/: cam.fsh  cam.vsh  test.fsh
mac-cam.xcodeproj/: project.pbxproj
